# Vesper_DB

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .mcp.json  .vast_contract  ANALYSIS_EXECUTIVE_SUMMARY.md  Agent_blueprint.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  CODING_STANDARDS.md  CONTRIBUTING.md  IMMEDIATE_ACTION_PLAN.md  LICENSE  Open_issues.md  PERFORMANCE_IMPROVEMENTS.md  PLANNING_SESSION_SUMMARY.md  README.md  REPOSITORY_CLEANUP_PROPOSAL.md  SECURITY.md  TESTING.md  VESPER_DEVELOPMENT_PLAN.md  WINDOWS_PLATFORM_SUPPORT.md  api-notes.md  bm25_tests_results.xml  fix_unexpected.py  prompt-blueprint.md  prompt-dev-roadmap.md  rebuild.bat  repo.yaml  run_vast_test.sh  test.c  test.sh  test_advanced_features.cpp  test_index_manager.cpp  test_ivfpq.cpp  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: augment-describe-pr.yml  ci.yml  open-pr-on-branch.yml  release.yml
algorithms/fixtures/: README.md
algorithms/spec/: README.md  compaction_and_publish.md  disk_graph.md  distance_kernels.md  filters.md  hnsw.md  ivf_pq_opq.md  tolerances.md  topk_and_planner.md
architecture/: adr-0001-system-overview.md  adr-0002-storage-engine.md  adr-0003-index-families.md  adr-0004-concurrency-model.md  adr-0005-error-taxonomy-logging.md  adr-0006-api-surface.md  component-map.md  errors.md  non-functional-slos.md
bench/: vesper_bench_index.cpp  vesper_full_benchmark.cpp
bench/micro/: bench_numa_allocator.cpp  bench_simd_kernels.cpp  capq_scalar_bench.cpp  cosine_bench.cpp  distance_bench.cpp  dummy_bench.cpp  fused_vs_materialized_bench.cpp  hybrid_search_bench.cpp  ivfpq_adc_bench.cpp  ivfpq_load_bench.cpp  kernels_backend_select_bench.cpp  kernels_dispatch_bench.cpp  kmeans_init_bench.cpp  replayer_apply_bench.cpp  simd_kernels_bench.cpp
build-fuzz/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  vesper_tests-b12d07c_include.cmake
build-release/: ALL_BUILD.vcxproj  Continuous.vcxproj  DartConfiguration.tcl  Experimental.vcxproj  INSTALL.vcxproj  Nightly.vcxproj  NightlyMemoryCheck.vcxproj  PACKAGE.vcxproj  RUN_TESTS.vcxproj  ZERO_CHECK.vcxproj  connectivity_smoke.vcxproj  hnsw_connectivity_test.vcxproj  hnsw_index_test.vcxproj  hnsw_thread_pool_stress_test.vcxproj  integration_test.vcxproj  kmeans_test.vcxproj  multi_index_test.vcxproj  simd_kernels_test.vcxproj  stress_test.vcxproj  test_hnsw_batch.vcxproj  test_index_manager.vcxproj  vesper.sln  vesper_bench_dummy.vcxproj  vesper_bench_fused_vs_materialized.vcxproj  vesper_bench_index.vcxproj  vesper_bench_simd.vcxproj  vesper_core.vcxproj  vesper_headers_check.vcxproj  vesper_tests.vcxproj  vesper_wal.vcxproj
cmake/: packaging.cmake
docs/: AGENT_HANDOFF_PROMPT.md  API_REFERENCE.md  BACKLOG.md  BM25_Serialization_v10.md  CAPQ.md  CGF_INNOVATION_SUMMARY.md  CODE_REVIEW_AGENT_PROMPT.md  CONTRIBUTING.md  C_API_Reference.md  Global_User_Guidelines_Deep_Research_Prompt.md  IVFPQ_Add_Bench.md  IVFPQ_Metadata_JSON_Policy.md  IVFPQ_Serialization_v11.md  OPERATOR_GUIDE.md  Open_issues.md  PRODUCTION_TASK_LIST.MD  RECALL_OPTIMIZATION_GUIDE.md  SETUP.md  TESTING.md  VESPER_ENGINEERING_PROMPT.md  VESPER_VALUE_PROPOSITION.md  benchmark-plan.md  blueprint.md
docs/ADRs/: ADR-0001-hybrid-search.md  ADR-0002-wal-crc32c-correction.md  ADR-0003-wal-manifest-durable-update.md  ADR-0004-wal-manifest-exception-free-parsing.md  ADR-0005-wal-manifest-filename-validation.md  ADR-0006-wal-manifest-duplicate-seq-policy.md  ADR-0007-wal-manifest-lsn-validation.md  ADR-0008-wal-manifest-rebuild-lsn-validation.md  ADR-0009-wal-manifest-lenient-rebuild.md  ADR-0010-wal-writer-durability.md  ADR-0011-wal-recover-scan-hardening.md  ADR-0012-wal-snapshot-durable-atomic-save.md
docs/Implementation/: AUDIT_2025_Codebase_Review.md  C_API_Legacy_Deprecation_Plan.md  IMPL_Batch1.md  IMPL_CAPQ_Const_View.md  IMPL_FastScanPq_Trained_Preconditions.md  IMPL_Memory_Pool_Overflow_Fix.md  IMPL_No_Exceptions_Hot_Alloc_Paths.md  IMPL_Pooled_Container_Scope_Safety.md
docs/Research/: RESEARCH_lenient_wal_rebuild.md
docs/benchmarks/: ivfpq_coarse_assigner.md
examples/: batch_operations.cpp  quantization_demo.cpp  real_world_test.cpp  simple_search.cpp
examples/c/: vesper_c_example.c  vesper_manager_example.c
examples/python/: vesper_ctypes_example.py
examples/rust/: vesper_bindgen_example.rs
experimental/: hnsw_lockfree.cpp  hnsw_lockfree.hpp
experiments/: VALIDATION.md
experiments/examples/: eval.report.json  experiment.yaml  prompt.manifest.json
experiments/schema/: eval.report.schema.json  experiment.schema.json  prompt.manifest.schema.json
include/: expected
include/vesper/: README.md  collection.hpp  error.hpp  error_mapping.hpp  examples.md  expected_polyfill.hpp  filter_eval.hpp  filter_expr.hpp  segment.hpp  span_polyfill.hpp  vesper_c.h  wal.hpp
scripts/: download_datasets.py  faiss_reference_compare.py  headers_check.cpp  run_tests.sh
src/: collection_stub.cpp  filter_eval.cpp  inmemory_collection.cpp  inmemory_index.hpp  workflow_propsoed.md
src/c/: vesper_c_api.cpp  vesper_c_error.hpp  vesper_manager_c_api.cpp
src/index/: bm25.cpp  capq.cpp  capq_calibration.cpp  capq_dist_avx2.cpp  capq_encode.cpp  capq_opq.cpp  capq_q4.cpp  capq_util.cpp  cascaded_geometric_filter.cpp  cgf.cpp  coarse_filter.cpp  disk_graph.cpp  fast_hadamard.cpp  hnsw.cpp  hnsw.cpp.bak2  hybrid_storage.cpp  incremental_repair.cpp  index_manager.cpp  ivf_pq.cpp  ivf_pq.cpp.bak2  kmeans.cpp  kmeans.cpp.bak2  kmeans_elkan.cpp  (+12 more)
tests/: CONTRIBUTING-wal.md  README.md
tools/: bench_matrix.py  capq_diagnostics.cpp  capq_sweep.cpp  connectivity_smoke.cpp  ivfpq_add_bench.cpp  ivfpq_autotune.cpp  ivfpq_persist_bench.cpp  mcp_config.json  measure_serialization_perf.py  requirements.txt  run_adc_bench.py  run_hnsw_matrix.ps1  test_capq_mcp.py  test_hierarchical_kd.cpp  vesper_e2e_runner.cpp  vsdev_ninja_debug.bat  vsdev_ninja_debug_msvc.bat
versioning/: CHANGELOG.md
(+239 files in other folders)
